# WHY_CPP

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  GettingStarted.html  LICENSE  Makefile  README.md  animation_8cpp_source.html  animation_8h_source.html  annotated.html  application_8cpp_source.html  application_8h_source.html  application__config_8h_source.html  application__listener_8h_source.html  audio_8h_source.html  audio__holder_8cpp_source.html  audio__holder_8h_source.html  average__window_8h_source.html  buttons_8h_source.html  c__api_8h_source.html  classAnimation-members.html  classAnimation.html  classApplication-members.html  classApplication.html  classApplicationListener-members.html  classApplicationListener.html  classAudioHolder-members.html  classAudioHolder.html  classAverageWindow-members.html  classAverageWindow.html  classContext-members.html  classContext.html  classFont-members.html  classFont.html  classFontsHolder-members.html  classFontsHolder.html  classFpsHolder-members.html  (+145 more)
.github/: FUNDING.yml
CMake/: ConfigureSDL2.cmake  DownloadSDL2.cmake
doc/: DoxygenLayout.xml  GettingStarted.dox  Overview.dox
doc/examples/: CMakeLists.txt  QuickStart_example.cpp
example/: CMakeLists.txt  main.cpp
example/html/: index.html
example_c/: CMakeLists.txt  main.c
example_js/: CMakeLists.txt  index.html  main.cpp
example_js/src/: main.js  mouse.js  native_hello_world.js  sound.js
lib/lodepng/: CMakeLists.txt  picopng.cpp
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  (+19 more)
src/: CMakeLists.txt  application.cpp  application.h  clamp.h  context.cpp  context.h  context_impl.h  default_font.cpp  default_font.h  drawing.cpp  font.cpp  import_sprites.cpp  input.cpp  logger.cpp  logger.h  loop.cpp  loop.h  sdl_context.cpp  sdl_context.h  sdl_texture.cpp  sdl_texture.h  text.cpp  time.cpp  video_memory.cpp  video_memory.h  whycpp.cpp
whycpp/: CMakeLists.txt  whycpp.pc.in
whycpp/CMake/: ConfigureSDL2.cmake  ConfigureSDL2Mixer.cmake  CppLint.cmake  DownloadSDL2Mixer.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
whycpp/include/whycpp/: animation.h  application_config.h  application_listener.h  buttons.h  c_api.h  color.h  drawing.h  font.h  import_sprites.h  input.h  lifecycle.h  log.h  palette.h  sound.h  text.h  time.h  types.h  whycpp.h
whycpp/lib/lodepng/: CMakeLists.txt  picopng.cpp
whycpp/lib/lodepng/include/lodepng/: picopng.h
whycpp/lib/sdl2_mixer/: CMakeLists.txt  README.md
whycpp/lib/sdl2_mixer/src/: music.c
whycpp/misc/cpplint/: cpplint.py
whycpp/src/: CMakeLists.txt  animation.cpp  application.cpp  application.h  audio.h  average_window.h  clamp.h  container.h  context.cpp  context.h  default_font.cpp  default_font.h  drawing.cpp  font.cpp  global_app_context.cpp  global_app_context.h  i_object.h  import_sprites.cpp  input.cpp  inputs_handler.h  int_utils.cpp  int_utils.h  lifecycle.cpp  logger.cpp  logger.h  loop.cpp  loop.h  sdl_context.cpp  sdl_deleter.cpp  sdl_texture.cpp  setup_context.cpp  setup_context.h  sound.cpp  sprite.cpp  sprite.h  text.cpp  time.cpp  timing.h  video_memory.cpp  video_memory.h  (+1 more)
whycpp/src/holders/: audio_holder.cpp  audio_holder.h  fonts_holder.cpp  fonts_holder.h  fps_holder.cpp  fps_holder.h  keyboard_holder.cpp  keyboard_holder.h  lifecycle_holder.cpp  lifecycle_holder.h  mouse_holder.cpp  mouse_holder.h  sprites_holder.cpp  sprites_holder.h  time_holder.cpp  time_holder.h  video_memory_holder.cpp  video_memory_holder.h
whycpp/src/impl/: animation.cpp  drawing.cpp  font.cpp  import_sprites.cpp  input.cpp  lifecycle.cpp  sound.cpp  text.cpp  time.cpp  whycpp.cpp
whycpp/src/loop/: i_inputs_handler.h  i_loop.cpp  i_loop.h  i_render_handler.h  loop_impl.cpp  loop_impl.h
whycpp/src/sdl_specific/: sdl_audio.cpp  sdl_audio_context.cpp  sdl_audio_context.h  sdl_context.cpp  sdl_context.h  sdl_deleter.h  sdl_inputs_handler.cpp  sdl_inputs_handler.h  sdl_logger.cpp  sdl_render_context.cpp  sdl_render_context.h  sdl_texture.cpp  sdl_texture.h  sdl_timing.cpp
whycpp_c/: CMakeLists.txt
whycpp_c/include/whycpp_c/: animation.h  application_config.h  application_listener.h  buttons.h  c_api.h  color.h  context.h  drawing.h  import_sprites.h  input.h  lifecycle.h  log.h  palette.h  text.h  time.h  whycpp_c.h
whycpp_c/src/: CMakeLists.txt  animation.cpp  context.cpp  drawing.cpp  drawing_int.cpp  global_context.cpp  import_sprites.cpp  input.cpp  lifecycle.cpp  log.cpp  palette.cpp  text.cpp  time.cpp  whycpp_c.cpp
whycpp_c/src/internal/: application_listener_int.h  drawing_int.h  global_context_int.h
whycpp_js/: CMakeLists.txt
whycpp_js/CMake/: ConfigureDuktape.cmake  DownloadDuktape.cmake
whycpp_js/example/: buttons.js  main.js  palette.js  prisma.js  random_lines.js  scene_manager.js  sound.js  whycpp.d.ts
whycpp_js/html/: index.html
whycpp_js/include/whycpp_js/: get_global_context.h  js_application_runner.h  js_registrator.h
whycpp_js/lib/duktape/: CMakeLists.txt
whycpp_js/src/: CMakeLists.txt  color_helpers.cpp  color_helpers.h  duk_helpers.cpp  duk_helpers.h  global_app_context.cpp  global_app_context.h  js_application.cpp  js_application.h  js_application_runner.cpp  js_config_reader.cpp  js_config_reader.h  js_drawing.cpp  js_drawing.h  js_input.cpp  js_input.h  js_lifecycle.cpp  js_lifecycle.h  js_sound.cpp  js_sound.h  js_stl.cpp  js_stl.h  js_text.cpp  js_text.h  js_time.cpp  js_time.h  js_whycpp.cpp  js_whycpp.h  main.cpp
whycpp_python/: CMakeLists.txt
whycpp_python/example/: main.py  whycpp_stubs.pyi
whycpp_python/src/: CMakeLists.txt  app_listener_py_wrappers.c  app_listener_py_wrappers.h  main.c  py_btns.c  py_btns.h  py_drawing.c  py_drawing.h  py_import_sprite.c  py_import_sprite.h  py_input.c  py_input.h  py_lifecycle.c  py_lifecycle.h  py_log.c  py_log.h  py_text.c  py_text.h  py_time.c  py_time.h  whycpp_wrapper.c  whycpp_wrapper.h
(+16 files in other folders)
