cmake_minimum_required(VERSION 3.6)
project(whycpp CXX)

math(EXPR BITNESS "8*${CMAKE_SIZEOF_VOID_P}")
set(CMAKE_CXX_STANDARD 14)

set(CMAKE_DIR "${PROJECT_SOURCE_DIR}/CMake")
list(APPEND CMAKE_MODULE_PATH ${CMAKE_DIR})

set(WHYCPP_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/include)
set(WHYCPP_SOURCES_DIR ${PROJECT_SOURCE_DIR}/src)

file(GLOB_RECURSE WHYCPP_INCLUDES ${WHYCPP_INCLUDES_DIR}/*.h)
file(GLOB_RECURSE WHYCPP_HEADERS ${WHYCPP_SOURCES_DIR}/*.h)
file(GLOB_RECURSE WHYCPP_SOURCES ${WHYCPP_SOURCES_DIR}/*.cpp)

set(LODEPNG_HEADERS ${PROJECT_SOURCE_DIR}/lib/lodepng/include)
add_subdirectory(lib/lodepng)
add_subdirectory(src)

# Add linting before compilation
file(GLOB_RECURSE SOURCES_LIST ${WHYCPP_INCLUDES_DIR}/*.h ${WHYCPP_SOURCES_DIR}/*.h ${WHYCPP_SOURCES_DIR}/*.cpp)
include(CppLint)
if (CPPLINT_FOUND)
    ADD_STYLE_CHECK_TARGET(lint "${SOURCES_LIST}")
    add_dependencies(${PROJECT_NAME} lint)
endif ()