cmake_minimum_required(VERSION 3.6)
project(whycpp_c CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 11)

set(WHYCPP_C_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/include)
set(WHYCPP_C_SOURCES_DIR ${PROJECT_SOURCE_DIR}/src)

file(GLOB_RECURSE WHYCPP_C_INCLUDES ${WHYCPP_C_INCLUDES_DIR}/*.h)
file(GLOB_RECURSE WHYCPP_C_HEADERS ${WHYCPP_C_SOURCES_DIR}/*.h)
file(GLOB_RECURSE WHYCPP_C_SOURCES ${WHYCPP_C_SOURCES_DIR}/*.c)
file(GLOB_RECURSE WHYCPP_C_SOURCES ${WHYCPP_C_SOURCES_DIR}/*.cpp)

add_subdirectory(src)
