cmake_minimum_required(VERSION 3.6)
project(whycpp_python C)

set(CMAKE_C_STANDARD 11)

set(WHYCPP_PYTHON_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/src)
set(WHYCPP_PYTHON_SOURCES_DIR ${PROJECT_SOURCE_DIR}/src)

file(GLOB_RECURSE WHYCPP_PYTHON_HEADERS ${WHYCPP_PYTHON_SOURCES_DIR}/*.h)
file(GLOB_RECURSE WHYCPP_PYTHON_SOURCES ${WHYCPP_PYTHON_SOURCES_DIR}/*.c)

add_subdirectory(src)